<resources>
    <string name="app_name">YoFo</string>
    <string name="changeBook">Изменить запись</string>
    <string name="_8942">⋮</string>
    <string name="delete">Удалить</string>
    <string name="newNotebook">Новая запись</string>
    <string name="bookAuthor">Автор</string>
    <string name="bookLabel">Название</string>
    <string name="bookDescription">Описание</string>
    <string name="loadImage">Загрузить изображение</string>
    <string name="makeNewNote">Сделать запись</string>
    <string name="aboutMainScreen">Мои шрифты</string>
    <string name="SaveNote">Сохранить</string>
    <string name="clear">Удалить записи</string>
    <string name="userText">Введи свой текст здесь</string>
    <string name="fontPermission"> \tВыбери фото рукописного шрифта в формате JPEG\n\n\tЛюбые артефакты или посторонние символы ухудшат качество работы приложения\n\n\tПример фото:
    </string>
    <string name="u2713">✓</string>
</resources>